# vulkan-minimal-hybrid-rendering

./: CMakeLists.txt  README.md  main.cpp
shaders/: shader.frag  shader.vert
shaders/spv/: shader.frag.spv  shader.vert.spv
src/: accel.hpp  buffer.hpp  context.hpp  main.cpp  pipeline.hpp  scene.hpp  swapchain.hpp  window.hpp
